syntax = "proto3";

package didcomm.messaging;

message BasicMessage {
    string text = 1;
}